# YAQ

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  conanfile.txt
include/: lib.hpp
resources/: YAQSchema.drawio
src/: CMakeLists.txt  acceptor.h  config_reader.h  connection.h  ini_config_reader.cpp  ini_config_reader.h  lib.cpp  logger.cpp  logger.h  main.cpp  network.h  protocol.cpp  protocol.h  socket.h  utils.h  yaq.cpp  yaq.h
src/yaq_client/: CMakeLists.txt  client.cpp  client.h  client_main.cpp
tests/: CMakeLists.txt  connection_test.cpp  init_config_reader_test.cpp  logger_test.cpp  mocks.h  network_test.cpp  protocol_test.cpp  test_main.cpp  yaq_test.cpp
